<resources>
    <string name="app_name">Radeef</string>
    <string name="enter_number">Enter phone number</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="my_number">536735321</string>
    <string name="continue_label">CONTINUE</string>
    <string name="add">ADD</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="verify">VERIFY</string>
    <string name="enter_otp">Enter your OTP code</string>
    <string name="otp">OTP code</string>
    <string name="resend_code">Resend code</string>
    <string name="payment">Payment</string>
    <string name="my_wallet">My Wallet</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash">Cash</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="edit">EDIT</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_birth_date">Your Birth Date</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="current_location">Current Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="done">DONE</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="wallet_history">Wallet history</string>
    <string name="recharge">Recharge</string>
    <string name="current_charge">Current Charge</string>
    <string name="credit">Credit</string>
    <string name="pickup">Pickup</string>
    <string name="destination">Destination</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="radeef_email">Radeef@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="radeef_phone">+9665000000</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="gender">Gender</string>
    <string name="not_mentioned">Not mentioned</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="upload_files">Upload your documents</string>
    <string name="driving_license">Driving license</string>
    <string name="vehicle_id">Vehicle Registration</string>
    <string name="personal_card">Personal card</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="nationality">Nationality</string>
    <string name="sex">Sex</string>
    <string name="saudi_arabia">SA</string>
    <string name="start">Let\'s Go!</string>
    <string name="driver_label">DRIVER</string>
    <string name="passenger_label">PASSENGER\t</string>
    <string name="choose_type">I\'m A</string>
    <string name="id_number">ID number</string>
    <string name="license_info">License Info</string>
    <string name="issue_date">Issue date</string>
    <string name="expire_date">Expire date</string>
    <string name="blood_type">Blood type</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="plate_number">Plate number</string>
    <string name="make">Make</string>
    <string name="car_make">Car make</string>
    <string name="car_color">Color</string>
    <string name="car_year">Manufacture year</string>
    <string name="car_capacity">Capacity</string>
    <string name="upload_you_vehicle_registration_card">Upload you vehicle registration card</string>
    <string name="car_model">Car model</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_description">Location is needed to use Radeef</string>
    <string name="riyadh_title">Riyadh</string>
    <string name="requests_will_be_displayed_here">Requests will be displayed here</string>
    <string name="rides_history">Rides History</string>
    <string name="cancel_label">CANCEL</string>

    <string name="vehicle_make_model">%1$s | %2$s</string>

    <string name="phone_number_format">+%1$s%2$s</string>
    <string name="confrim_lable">CONFIRM</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="send_code">SEND CODE</string>
    <string name="error_phone">Phone number must be 9 digits</string>
    <string name="resend_code_question">Didn\'t receive code?</string>
    <string name="error_otp">OTP code is not correct! try again.</string>
    <string name="error_otp_length">OTP code must consist of 6 digits</string>
    <string name="error_name">The name must be at least 4 characters in length</string>
    <string name="error_id">ID number must be 10 digits in length</string>
    <string name="error_gender">Gender must be selected from menu</string>
    <string name="error_nationality">Nationality must be selected from menu</string>
    <string name="error_email">Email format is not valid</string>
    <string name="image_is_required">Image is required</string>
    <string name="upload_you_license_card">Upload you license card</string>
    <string name="issue_date_is_required">Issue date is required</string>
    <string name="expiration_date_is_required">Expiration date is required</string>
    <string name="blood_type_should_be_specified">blood type should be specified</string>
    <string name="error_date_range">Date range is invalid</string>
    <string name="expiration_date_cannot_be_past">Expiration date can\'t be past</string>
    <string name="issue_date_cannot_be_future">Issue date can\'t be future</string>
    <string name="make_is_required">Make is required</string>
    <string name="color_is_required">Color is required</string>
    <string name="year_is_required">Year is required</string>
    <string name="capacity_is_required">Capacity is required</string>
    <string name="invalid_plate_number">Invalid plate number. required format (AAA0000)</string>
    <string name="model_is_required">Model is required</string>
    <string name="change_places">change places</string>
    <string name="stop">STOP</string>

</resources>